--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,221 @@
 :root {
     --main: #21489C;
 }
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
+}
+
+body, html{
+    width: 100%;
+    height: auto;
+    position: relative;
+    background-color: rgb(233, 233, 233);
+}
+
+/* header */
+header{
+    background-color: var(--main);
+    height: 25vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.head-title{
+    position: absolute;
+    top: 1rem;
+}
+
+h1{
+    color: white;
+    font-size: 1.4rem;
+    font-weight: 300;
+}
+
+img{
+    width: 2rem;
+}
+
+/* cards */
+.money-count{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 15vh;
+}
+
+.money-card{
+    display: flex;
+    width: min(80%, 70vw);
+    justify-content: space-around;
+}
+
+.money-card .card:nth-child(3){
+    background-color: rgb(41, 190, 41);
+    color: white;
+}
+
+.money-card .card:nth-child(3) .card-title h2{
+    color: white;
+}
+
+.card{
+    width: 100%;
+    background-color: rgb(255, 255, 255);
+    border-radius: 10px;
+    padding: 1rem;
+    margin: 0.3rem;
+}
+
+.card-title{
+    display: flex;
+    justify-content: space-between;
+}
+
+h2{
+    font-size: 1rem;
+    color:rgb(129, 129, 129);
+}
+
+.card-value p{
+    font-size: 2rem;
+}
+
+/* container */
+.container{
+    width:100%;
+    display: flex;
+    justify-content: center;
+}
+
+.main-content{
+    width: min(80%, 70vw);
+    margin-top: 1.4rem;
+}
+
+.btn-add{
+    padding: 3vh 0;
+}
+
+.values{
+    width: 100%;
+}
+
+.list-value{
+    width: 100%;
+    list-style: none;
+}
+
+li{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    padding: 1% 1%;
+    align-items: center;
+    border-radius: 5px;
+    background-color: white;
+    margin-bottom: 10px;
+}
+
+a{
+    text-decoration: none;
+    color: var(--main);
+    padding-left: 0.5%;
+    cursor: pointer;
+}
+
+.remove a img{
+    width: 1.4rem;
+}
+
+/* modal */
+.modal{
+    opacity: 0;
+    visibility: hidden;
+}
+
+.modal.off{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    background-color: rgba(0, 0, 0, 0.486);
+    position: absolute;
+    top: 0;
+    justify-content: center;
+    align-items: center;
+    visibility: visible;
+    opacity: 1;
+}
+
+.modal-form{
+    width: min(60%, 80vw);
+    background-color: white;
+    padding: 3vh;
+}
+
+.modal-form .form-middle{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    width: 100%;
+    grid-column-gap: 10px;
+}
+
+.check-opt{
+    display: grid;
+    width: 100%;
+    grid-template-columns: 1fr 1fr;
+}
+
+.checkk{
+    display: flex;
+    width: 100%;
+}
+
+.checkk input{
+    width: auto;
+    margin-right: 1rem;
+}
+
+legend{
+    font-size: 1rem;
+    margin-bottom: 0.5rem;
+}
+
+input{
+    width: 100%;
+    padding: 0.5rem;
+    font-size: 1rem;
+    margin-bottom: 0.5rem;
+    border: 1px solid lightgray;
+}
+
+.form-down{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 10px;
+}
+
+button{
+    background-color: var(--main);
+    border: 0;
+    padding: 1rem;
+    color: white;
+    cursor: pointer;
+}
+
+/*  hovers  */
+a:hover{
+    color: #5c77af;
+}
+
+
+button:hover{
+    background-color: #5c77af;
+}
