--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,8 @@ h2{
 
 .btn-add{
     padding: 3vh 0;
+    justify-content: space-between;
+    display: flex;
 }
 
 .values{
@@ -131,7 +133,7 @@ a{
     cursor: pointer;
 }
 
-.remove a img{
+a.remove img{
     width: 1.4rem;
 }
 
